<resources>
    <string name="app_name" context="Not translate">MEGA</string>
    <string name="pdf_app_name" context="Not translate">MEGA PDF Viewer</string>
    <string name="app_version" context="Not translate">3.3.8 (205)</string>
    <string name="sdk_version" context="Not translate">8271d27</string>
    <string name="karere_version" context="Not translate">903f3d3</string>
    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA provides user-controlled encrypted cloud storage and chat through standard web browsers, together with dedicated apps for mobile devices. Unlike other cloud storage providers, your data is encrypted and decrypted by your client devices only and never by us.\n\nUpload your files from your smartphone or tablet then search, store, download, stream, view, share, rename or delete your files any time, from any device, anywhere. Share folders with your contacts and see their updates in real time. The encryption process means we cannot access or reset your password so you MUST remember it (unless you have your Recovery Key backed up) or you will lose access to your stored files.\n\nEnd-to-end user-encrypted MEGA video chat allows for total privacy, and has been available through the browser since 2016. It has been extended to our mobile app, with chat history accessible across multiple devices. Users can also easily add files to a chat from their MEGA Cloud Drive.\n\nMEGA offers a generous 50 GB free storage for all registered users with bonus achievements, and offers paid plans with much higher limits:\n\n\nPRO LITE subscription: 4.99 € per month or 49.99 € per year gives you 200 GB of storage space and 1 TB of transfer quota per month.\nPRO I subscription: 9.99 € per month or 99.99 € per year gives you 1 TB of storage space and 2 TB of transfer quota per month.\nPRO II subscription: 19.99 € per month or 199.99 € per year gives you 4 TB of storage space and 8 TB of transfer quota per month.\nPRO III subscription: 29.99 € per month or 299.99 € per year gives you 8 TB of storage space and 16 TB of transfer quota per month.\n\nSubscriptions are renewed automatically for successive subscription periods of the same duration and at the same price as the initial period chosen. To manage your subscriptions, simply click on the Play Store icon on your mobile device, sign in with your Google ID (if you haven’t already done so) and then click on the MEGA app. You’ll be able to manage your subscription there.\n\nApp Permissions:\nWRITE_EXTERNAL_STORAGE -> Download your files from MEGA to your device and upload files from your device to MEGA\nCAMERA -> Take a picture and upload your photos to MEGA\nREAD_CONTACTS -> Easily add contacts from your device as MEGA contacts\nRECORD_AUDIO &amp; CAPTURE_VIDEO_OUTPUT (mic and camera) -> MEGA provides for end-to-end encrypted audio/video calls\n\n\nTo enhance users’ confidence in the MEGA system, all of the client-side code is published, so interested security researchers can evaluate the encryption process. The code of our mobile app is located on: https://github.com/meganz/android\n\nFor more info, please check our website:\nSee https://mega.nz/terms\n\n\nDesktop - https://mega.nz/</string>
    <string name="general_x_of_x" context="Showing progress of elements. Example: 2 of 10."> of </string>
    <string name="general_yes" context="Answer for confirmation dialog.">Yes</string>
    <string name="general_no" context="Answer for confirmation dialog.">No</string>
    <string name="general_select" context="Selecting a specific location in MEGA. This is the text of the button">Select</string>
    <string name="general_download" context="Item menu option upon right click on one or multiple files.">Download</string>
    <string name="general_move" context="button">Move</string>
    <string name="general_remove" context="button">Remove</string>
    <string name="general_share" context="button">Share</string>
    <string name="general_leave" context="button">Leave</string>
    <string name="general_file_info" context="Label of the option menu. When clicking this button, the app shows the info of the file">File info</string>
    <string name="action_settings" context="Menu item">Settings</string>
    <string name="action_search" context="Search button">Search</string>
    <string name="action_help" context="Menu item">Help</string>
    <string name="action_upgrade_account" context="Change from a free account to paying MEGA">Upgrade account</string>
    <string name="action_select_all" context="Menu item to select all the elements of a list">Select all</string>
    <string name="action_unselect_all" context="Menu item to unselect all the elements of a list">Clear selection</string>
    <string name="section_cloud_drive" context="The name of every users root drive in the cloud of MEGA. The term \'cloud\' is a new computer term and can probably not be translated. Do not translate &quot;cloud&quot; literal unless your language allows this. Please see http://en.wikipedia.org/wiki/Cloud_computing for your reference.">Cloud drive</string>
    <string name="section_inbox" context="title of the screen that show the inbox">Inbox</string>
    <string name="section_shared_items" context="title of the screen that shows all the shared items">Shared folders</string>
    <string name="section_contacts" context="Title of the contact list">Contacts</string>
    <string name="section_photo_sync" context="title of the screen where the camera images are uploaded">Camera uploads</string>
    <string name="file_properties_available_offline" context="The files are available &quot;offline&quot; (without a network Wi-Fi mobile data connection)">Available offline</string>
    <string name="context_get_link_menu" context="Item menu option upon right click on one or multiple files.">Get link</string>
    <string name="alert_leave_share" context="Title alert before leaving a share.">Leave share</string>
    <string name="context_remove_link_menu" context="Item menu option upon right click on one or multiple files.">Remove link</string>
    <string name="context_rename" context="Item menu option upon right click on one or multiple files.">Rename</string>
    <string name="context_move" context="Item menu option upon right click on one or multiple files.">Move</string>
    <string name="context_copy" context="Item menu option upon right click on one or multiple files.">Copy</string>
    <string name="context_move_to_trash" context="menu item">Move to rubbish bin</string>
    <string name="context_remove" context="Menu option to delete one or multiple selected items.">Remove</string>
    <string name="context_share_folder" context="menu item">Share folder</string>
    <string name="context_send_file" context="menu item">Send file to chat</string>
    <string name="context_send_contact" context="menu item">Share contact to chat</string>
    <string name="context_delete" context="menu item">Delete</string>
    <string name="settings_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Storage</string>
    <string name="settings_pin_lock" context="settings category title. Below this title, the pin lock settings start">PIN Lock</string>
    <string name="settings_advanced_features" context="Settings category title for cache and offline files">Advanced</string>
    <string name="settings_advanced_features_cache" context="Settings preference title for cache">Clear Cache</string>
    <string name="settings_advanced_features_offline" context="Settings preference title for offline files">Clear Offline Files</string>
    <string name="settings_storage_download_location" context="title of the setting to set the default download location">Default download location</string>
    <string name="settings_storage_ask_me_always" context="Whether to always ask the user each time.">Always ask for download location</string>
    <string name="settings_storage_advanced_devices" context="Whether to enable the storage in advanced devices">Display advanced devices (external SD)</string>
    <string name="settings_camera_upload_on" context="settings option">Enable Camera Uploads</string>
    <string name="settings_camera_upload_how_to_upload" context="settings option. How to upload the camera images: via Wi-Fi only or via Wi-Fi and data plan">How to upload</string>
    <string name="settings_secondary_upload_on" context="The Secondary Media uploads allows to create a second Camera Folder synchronization. Enabling it would imply to choose a new local folder and then, a new destination folder in MEGA. This is the text that appears in the settings option to enable the second synchronization.">Enable Secondary Media uploads</string>
    <string name="settings_camera_upload_what_to_upload" context="What kind of files are going to be uploaded: images, videos or both">File Upload</string>
    <string name="settings_camera_upload_charging" context="Option to choose that the camera sync will only be enable when the device is charging">Only when charging</string>
    <string name="settings_keep_file_names" context="Option to choose that the camera sync will maintain the local file names when uploading">Keep file names as in the device</string>
    <string name="settings_local_camera_upload_folder" context="The location of where the user photos or videos are stored in the device.">Local Camera folder</string>
    <string name="settings_mega_camera_upload_folder" context="The location of where the user photos or videos are stored in MEGA.">MEGA Camera Uploads folder</string>
    <string name="settings_local_secondary_folder" context="The location of where the user photos or videos of the secondary sync are stored in the device.">Local Secondary folder</string>
    <string name="settings_mega_secondary_folder" context="The location of where the user photos or videos of the secondary sync are stored in MEGA.">MEGA Secondary folder</string>
    <string name="settings_reset_lock_code" context="settings of the pin lock">Reset PIN code</string>
    <string name="settings_pin_lock_switch" context="settings of the pin lock">PIN Lock</string>
    <string name="settings_about" context="Caption of a title, in the context of &quot;About MEGA&quot; or &quot;About us&quot;">About</string>
    <string name="settings_about_privacy_policy" context="App means &quot;Application&quot;">Privacy Policy</string>
    <string name="settings_about_terms_of_service" context="App means &quot;Application&quot;">Terms of Service</string>
    <string name="settings_about_app_version" context="App means &quot;Application&quot;">App version</string>
    <string name="settings_about_sdk_version" context="Title of the label where the SDK version is shown">MEGA SDK version</string>
    <string name="settings_about_code_link_title" context="Link to the public code of the app">View source code</string>
    <string name="edit_link_option" context="Option of the sliding panel to edit the link of a node">Manage link</string>
    <string name="section_chat" context="Item of the navigation title for the chat section">Chat</string>
    <string name="tab_archive_chat" context="Title of the archived chats tab. Capital letters">Archive</string>
    <string name="general_mute" context="button">Mute</string>
    <string name="general_unmute" context="button">Unmute</string>
    <string name="group_chat_start_conversation_label" context="Label for the option of the sliding panel to start a one to one chat">Start conversation</string>
    <string name="add_to_cloud" context="Menu option">Add to Cloud Drive</string>
    <string name="context_send_file_to_chat" context="menu option to send a file to a chat">Send to chat</string>
    <string name="context_restore" context="Menu option to restore an item from the Rubbish bin">Restore</string>
</resources>