<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">
    
     <PreferenceCategory
        android:key="settings_pin_lock"
        android:title="@string/settings_pin_lock">
 <!--        android:textColor="@color/pressed_mega">  -->
        
		 <mega.privacy.android.app.components.TwoLineCheckPreference
			 android:key="settings_pin_lock_enable"
			 android:title="@string/settings_pin_lock_switch"
			 android:defaultValue="false"/>
		
		<Preference
	        android:key="settings_pin_lock_code"
	        android:title="@string/settings_reset_lock_code"/>
    </PreferenceCategory>

    <PreferenceCategory 
        android:key="settings_camera_upload"
        android:title="@string/section_photo_sync"
        android:textColor="@color/pressed_mega">
        
		<Preference
	        android:key="settings_camera_upload_on"
	        android:title="@string/settings_camera_upload_on" />
		
		<ListPreference
	        android:key="settings_camera_upload_how_to_upload"
	        android:title="@string/settings_camera_upload_how_to_upload"
	        android:entries="@array/settings_camera_upload_how_to_entries"
	        android:entryValues="@array/settings_camera_upload_how_to_values" />
		
		<ListPreference
	        android:key="settings_camera_upload_what_to_upload"
	        android:title="@string/settings_camera_upload_what_to_upload" 
	        android:entries="@array/settings_camera_upload_file_upload_entries"
	        android:entryValues="@array/settings_camera_upload_file_upload_values" />
		
		<mega.privacy.android.app.components.TwoLineCheckPreference
            android:key="settings_camera_upload_charging"
        	android:title="@string/settings_camera_upload_charging" />
		
		<mega.privacy.android.app.components.TwoLineCheckPreference
            android:key="settings_keep_file_names"
        	android:title="@string/settings_keep_file_names" />
		
		<Preference
	        android:key="settings_local_camera_upload_folder"
	        android:title="@string/settings_local_camera_upload_folder" />
		
		<Preference
		    android:key="settings_local_camera_upload_folder_sdcard"
		    android:title="@string/settings_local_camera_upload_folder" />
		
		<Preference
	        android:key="settings_mega_camera_folder"
	        android:title="@string/settings_mega_camera_upload_folder" />
		
		<Preference
	        android:key="settings_secondary_media_folder_on"
	        android:title="@string/settings_secondary_upload_on" />
		
		<Preference
	        android:key="settings_local_secondary_media_folder"
	        android:title="@string/settings_local_secondary_folder" />
		
		<Preference
	        android:key="settings_mega_secondary_media_folder"
	        android:title="@string/settings_mega_secondary_folder" />
	</PreferenceCategory>

	<PreferenceCategory
		android:key="settings_chat"
		android:layout="@layout/my_category_preference"
		android:title="@string/section_chat">
		<!--        android:textColor="@color/pressed_mega">  -->

		<mega.privacy.android.app.components.TwoLineCheckPreference
			android:key="settings_chat_enable"
			android:title="@string/settings_chat_off"
			android:defaultValue="true"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:key="settings_status_chat"
		android:layout="@layout/my_category_preference"
		android:title="@string/settings_chat_status">
		<!--        android:textColor="@color/pressed_mega">  -->

		<mega.privacy.android.app.components.TwoLineCheckPreference
			android:key="settings_status_chat_online"
			android:title="@string/settings_chat_status_online" />

		<mega.privacy.android.app.components.TwoLineCheckPreference
			android:key="settings_status_chat_invisible"
			android:title="@string/settings_chat_status_invisible" />

		<mega.privacy.android.app.components.TwoLineCheckPreference
			android:key="settings_status_chat_offline"
			android:title="@string/settings_chat_status_offline" />

	</PreferenceCategory>
	
    <PreferenceCategory 
        android:key="settings_storage"
        android:title="@string/settings_storage"
        android:textColor="@color/pressed_mega">
		
        <mega.privacy.android.app.components.TwoLineCheckPreference
            android:key="settings_storage_ask_me_always"
        	android:title="@string/settings_storage_ask_me_always" />
        
        <mega.privacy.android.app.components.TwoLineCheckPreference
            android:key="settings_storage_advanced_devices"
        	android:title="@string/settings_storage_advanced_devices" />
        
        <Preference 
            android:key="settings_storage_download_location_sd_card_preference"
            android:title="@string/settings_storage_download_location"/>
        
		<Preference
	        android:key="settings_storage_download_location"
	        android:title="@string/settings_storage_download_location" />
	</PreferenceCategory>
	
	<PreferenceCategory
	    android:key="advanced_features"
	    android:textColor="@color/pressed_mega"
	    android:title="@string/settings_advanced_features" >
		
	    <Preference
	        android:key="settings_advanced_features_cache"
	        android:title="@string/settings_advanced_features_cache" />
	    
	    <Preference
	        android:key="settings_advanced_features_offline"
	        android:title="@string/settings_advanced_features_offline" />
	</PreferenceCategory>
	
    <PreferenceCategory 
        android:key="settings_about"
        android:title="@string/settings_about"
        android:textColor="@color/pressed_mega">
		
        <Preference
            android:key="settings_about_privacy_policy"
        	android:title="@string/settings_about_privacy_policy"
        	android:summary="" />
        
        <Preference
            android:key="settings_about_terms_of_service"
        	android:title="@string/settings_about_terms_of_service"
        	android:summary="" />

		<Preference
			android:key="settings_about_code_link"
			android:title="@string/settings_about_code_link_title" />

        <Preference
            android:key="settings_about_sdk_version"
        	android:title="@string/settings_about_sdk_version"
        	android:summary="@string/sdk_version" />
		
        <Preference
            android:key="settings_about_app_version"
        	android:title="@string/settings_about_app_version"
        	android:summary="@string/app_version" />


	</PreferenceCategory>
</PreferenceScreen>