<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cab_menu_select_all"
        android:orderInCategory="100"
        android:title="@string/action_select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_unselect_all"
        android:orderInCategory="100"
        android:title="@string/action_unselect_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_menu_start_conversation"
        android:icon="@drawable/ic_chat"
        android:orderInCategory="100"
        android:title="@string/group_chat_start_conversation_label"
        app:iconTint="?attr/colorSecondary"
        app:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_share_folder"
        android:icon="@drawable/ic_share_white"
        android:orderInCategory="116"
        android:title="@string/context_share_folder"
        app:iconTint="?attr/colorSecondary"
        app:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_send_file"
        android:icon="@drawable/ic_send_to_contact"
        android:orderInCategory="115"
        android:title="@string/context_send_file"
        app:iconTint="?attr/colorSecondary"
        app:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_send_to_chat"
        android:icon="@drawable/ic_share_contact"
        android:orderInCategory="115"
        android:title="@string/context_send_contact"
        app:iconTint="?attr/colorSecondary"
        app:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_help"
        android:orderInCategory="115"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_upgrade_account"
        android:orderInCategory="120"
        android:title="@string/action_upgrade_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="135"
        android:title="@string/context_remove"
        app:iconTint="?attr/colorSecondary"
        app:showAsAction="never" />

</menu>

