<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
    
    <item
        android:id="@+id/cab_menu_select_all"
        android:orderInCategory="100"
        android:title="@string/action_select_all"
        MEGA:showAsAction="never" />
        
   <item
        android:id="@+id/cab_menu_unselect_all"
        android:orderInCategory="100"
        android:title="@string/action_unselect_all"
        MEGA:showAsAction="never" />

   <item
       android:id="@+id/cab_menu_restore_from_rubbish"
       android:orderInCategory="100"
       android:title="@string/context_restore"
       android:visible="false"
       MEGA:showAsAction="never" />
    
    <item
        android:id="@+id/cab_menu_download"
        android:icon="@drawable/ic_download_white"
        android:orderInCategory="105"
        android:title="@string/general_save_to_device"
        MEGA:showAsAction="never" />
    
    <item
        android:id="@+id/cab_menu_share"
        android:icon="@drawable/ic_share_white"
        android:tint="@color/white"
        android:orderInCategory="105"
        android:title="@string/context_share_folder"
        android:visible="false"
        MEGA:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_remove_share"
        android:icon="@drawable/ic_remove_share"
        android:tint="@color/white"
        android:orderInCategory="105"
        android:title="@string/context_share_folder"
        android:visible="false"
        MEGA:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_rename"
        android:icon="@drawable/ic_menu_rename_dark"
        android:orderInCategory="110"
        android:title="@string/context_rename"
        MEGA:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_leave_multiple_share"
        android:orderInCategory="115"
        android:icon="@drawable/ic_leave_share_w"
        android:title="@string/alert_leave_share"
        MEGA:showAsAction="never" />
    
    <item
        android:id="@+id/cab_menu_copy"
        android:orderInCategory="130"
        android:icon="@drawable/ic_copy_white"
        android:title="@string/context_copy"
        MEGA:showAsAction="never" />
    
    <item
        android:id="@+id/cab_menu_move"
        android:orderInCategory="120"
        android:icon="@drawable/ic_move_white"
        android:title="@string/context_move"
        MEGA:showAsAction="never" />
    
    <item
        android:id="@+id/cab_menu_share_link"
        android:orderInCategory="125"
        android:icon="@drawable/ic_link_white"
        android:tint="@color/white"
        android:title="@string/context_get_link_menu"
        android:visible="false"
        MEGA:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_share_link_remove"
        android:orderInCategory="127"
        android:icon="@drawable/ic_remove_link_w"
        android:tint="@color/white"
        android:title="@string/context_remove_link_menu"
        android:visible="false"
        MEGA:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_edit_link"
        android:orderInCategory="109"
        android:tint="@color/white"
        android:icon="@drawable/ic_link_white"
        android:title="@string/edit_link_option"
        android:visible="false"
        MEGA:showAsAction="never" />

    <item
        android:id="@+id/cab_menu_send_to_chat"
        android:icon="@drawable/ic_send_to_contact"
        android:orderInCategory="128"
        android:title="@string/context_send_file_to_chat"
        android:visible="false"
        MEGA:showAsAction="never" />
    
    <item
        android:id="@+id/cab_menu_trash"
        android:icon="@drawable/ic_close_white"
        android:orderInCategory="130"
        android:title="@string/context_move_to_trash"
        MEGA:showAsAction="never" />   

</menu>